Added spawn rate setting; Rename from com to dude;

--- a/dude.serveny.streamdeck-matrix.sdPlugin/manifest.json
+++ b/dude.serveny.streamdeck-matrix.sdPlugin/manifest.json
@@ -43,5 +43,5 @@
 		"Version": "20",
 		"Debug": "enabled"
 	},
-	"UUID": "com.serveny.streamdeck-matrix"
+	"UUID": "dude.serveny.streamdeck-matrix"
 }
