Set tile font size to 32

--- a/dude.serveny.streamdeck-matrix.sdPlugin/manifest.json
+++ b/dude.serveny.streamdeck-matrix.sdPlugin/manifest.json
@@ -15,6 +15,7 @@
 			"States": [
 				{
 					"Image": "imgs/actions/tile/black",
+					"FontSize": 32,
 					"TitleAlignment": "middle"
 				}
 			]
