--- a/dude.serveny.tile-rain-matrix.sdPlugin/manifest.json
+++ b/dude.serveny.tile-rain-matrix.sdPlugin/manifest.json
@@ -46,7 +46,7 @@
 	},
 	"Profiles": [
 		{
-			"Name": "profiles/matrix",
+			"Name": "profiles/TileRainMatrix",
 			"DeviceType": 0,
 			"Readonly": false,
 			"DontAutoSwitchWhenInstalled": false
