--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "scripts": {
         "build": "rollup -c",
         "watch": "rollup -c -w --watch.onEnd=\"streamdeck restart dude.serveny.tile-rain-matrix\"",
+        "validate": "streamdeck validate dude.serveny.tile-rain-matrix.sdPlugin",
         "link": "streamdeck link dude.serveny.tile-rain-matrix.sdPlugin",
+        "stop": "streamdeck stop dude.serveny.tile-rain-matrix.sdPlugin",
         "restart": "streamdeck restart dude.serveny.tile-rain-matrix.sdPlugin",
         "pack": "streamdeck pack dude.serveny.tile-rain-matrix.sdPlugin -o ./dist/ -f"
     },
