--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     },
     "type": "module",
     "devDependencies": {
-        "@elgato/cli": "1.2.0",
+        "@elgato/cli": "1.4.0",
         "@rollup/plugin-commonjs": "28.0.3",
-        "@rollup/plugin-node-resolve": "^15.2.2",
-        "@rollup/plugin-terser": "^0.4.4",
-        "@rollup/plugin-typescript": "^12.1.0",
-        "@tsconfig/node20": "^20.1.2",
-        "@types/node": "~20.15.0",
-        "rollup": "4.40.2",
-        "tslib": "2.6.2",
-        "typescript": "5.2.2"
+        "@rollup/plugin-node-resolve": "16.0.1",
+        "@rollup/plugin-terser": "0.4.4",
+        "@rollup/plugin-typescript": "12.1.2",
+        "@tsconfig/node20": "20.1.5",
+        "@types/node": "22.15.21",
+        "rollup": "4.41.0",
+        "tslib": "2.8.1",
+        "typescript": "5.8.3"
     },
     "dependencies": {
-        "@elgato/streamdeck": "^1.0.0"
+        "@elgato/streamdeck": "1.3.1"
     }
 }
