--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "scripts": {
         "build": "rollup -c",
         "watch": "rollup -c -w --watch.onEnd=\"streamdeck restart dude.serveny.tile-rain-matrix\"",
+        "lint": "eslint --max-warnings 0",
+        "prettier": "prettier . --check",
+        "prettier:fix": "prettier . --write",
         "validate": "streamdeck validate dude.serveny.tile-rain-matrix.sdPlugin",
         "link": "streamdeck link dude.serveny.tile-rain-matrix.sdPlugin",
         "stop": "streamdeck stop dude.serveny.tile-rain-matrix.sdPlugin",
@@ -11,17 +14,20 @@
     "type": "module",
     "devDependencies": {
         "@elgato/cli": "1.4.0",
+        "@elgato/eslint-config": "^0.1.0",
+        "@elgato/prettier-config": "^0.2.6",
         "@rollup/plugin-commonjs": "28.0.3",
         "@rollup/plugin-node-resolve": "16.0.1",
         "@rollup/plugin-terser": "0.4.4",
         "@rollup/plugin-typescript": "12.1.2",
         "@tsconfig/node20": "20.1.5",
         "@types/node": "20.17.50",
-        "rollup": "4.41.0",
+        "rollup": "4.41.1",
         "tslib": "2.8.1",
         "typescript": "5.8.3"
     },
     "dependencies": {
         "@elgato/streamdeck": "1.3.1"
-    }
+    },
+    "prettier": "@elgato/prettier-config"
 }
