--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "type": "module",
     "devDependencies": {
         "@elgato/cli": "1.4.0",
-        "@elgato/eslint-config": "^0.1.0",
-        "@elgato/prettier-config": "^0.2.6",
+        "@elgato/eslint-config": "0.1.0",
+        "@elgato/prettier-config": "0.2.6",
         "@rollup/plugin-commonjs": "28.0.3",
         "@rollup/plugin-node-resolve": "16.0.1",
         "@rollup/plugin-terser": "0.4.4",
         "@rollup/plugin-typescript": "12.1.2",
         "@tsconfig/node20": "20.1.5",
         "@types/node": "20.17.50",
-        "rollup": "4.41.1",
+        "rollup": "4.43.0",
         "tslib": "2.8.1",
         "typescript": "5.8.3"
     },
